--- a/buildserver/tasks/main.yml
+++ b/buildserver/tasks/main.yml
@@ -5,3 +5,21 @@
     - default-jdk
     - maven
     - git
+
+- name: Cloning the repo
+    git: 
+      repo: https://github.com/boxfuse/boxfuse-sample-java-war-hello.git
+      dest: {{ work_dir }}
+      clone: yes
+      update: yes 
+
+- name: Artifact generation
+    command: mvn package
+    args:
+        chdir: {{ work_dir }}
+
+- name: Artifact delivery step 1
+    synchronize:
+      mode: pull
+      src: {{ work_dir }}/target/hello-1.0.war
+      dest: /tmp/
