--- a/buildserver/tasks/main.yml
+++ b/buildserver/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Ensure packages is present
   apt: name={{ item }} state=present
-  whith_items:
+  with_items:
     - default-jdk
     - maven
     - git
