--- a/buildserver/tasks/main.yml
+++ b/buildserver/tasks/main.yml
@@ -11,5 +11,6 @@
 
 - name: Artifact generation
   command: args='mvn package' chdir={{ work_dir }}
-  notify: 
-      - moving the artifact st 1
+
+- name: moving the artifact st 1
+  synchronize: mode=pull src={{ work_dir }}/target/hello-1.0.war dest=/tmp/
