--- a/buildserver/tasks/main.yml
+++ b/buildserver/tasks/main.yml
@@ -15,5 +15,5 @@
 - name: moving the artifact st 1
   synchronize: 
     mode: pull 
-    src: {{ work_dir }}/target/hello-1.0.war
-    dest: /tmp/
+    src={{ work_dir }}/target/hello-1.0.war
+    dest=/tmp/
