--- a/prodserver/tasks/main.yml
+++ b/prodserver/tasks/main.yml
@@ -5,9 +5,6 @@
     state: present
 
 - name: Artifact delivery to dest
-    synchronize:
-      src: /tmp/hello-1.0.war
-      dest: /var/lib/tomcat9/webapps/
-      delete: yes
+    synchronize: 'src=/tmp/hello-1.0.war dest=/var/lib/tomcat9/webapps/ delete=yes' 
     notify: 
       - restart tomcat
